--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "task-earnings-bot",
   "version": "1.0.0",
+  "type": "module",
   "description": "Telegram Task Earnings Bot integrated with Monetag ads.",
   "main": "server.js",
   "scripts": {
@@ -9,6 +10,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.1",
-    "axios": "^1.6.0"
+    "node-fetch": "^2.6.7"
   }
 }
