--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "task-earnings-bot",
-  "version": "1.0.0",
-  "type": "module",
-  "description": "Telegram Task Earnings Bot integrated with Monetag ads.",
+  "version": "3.0.0",
+  "description": "Telegram Task Earnings Bot with Monetag Ads",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.7",
+    "dotenv": "^16.3.1",
+    "express": "^4.19.2",
     "pg": "^8.11.1",
-    "node-fetch": "^2.6.7"
+    "telegraf": "^4.16.3"
   }
 }
