--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-TELEGRAM_BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
-DATABASE_URL=YOUR_RENDER_POSTGRES_URL
+DATABASE_URL=postgresql://task_earnings_db_user:cRsisnWLclnxipJspodN72YEwItqnZE0@dpg-d447ne6mcj7s73bug8ug-a.oregon-postgres.render.com/task_earnings_db
+BOT_TOKEN=7985799310:AAGiIpTrOPL2jQBrai_TnS0U96Ymw63SVvw
 MONETAG_ZONE=10136395
-BASE_URL=https://your-render-app.onrender.com
+BASE_URL=https://task-earnings-bot.onrender.com
 ADMIN_TELEGRAM_IDS=5236441213,5725566044
--url-here
