Modify .env for security and new configurations
Updated sensitive information in .env file and added new environment variables.

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-DATABASE_URL=postgresql://task_earnings_db_user:cRsisnWLclnxipJspodN72YEwItqnZE0@dpg-d447ne6mcj7s73bug8ug-a.oregon-postgres.render.com/task_earnings_db
-BOT_TOKEN=7985799310:AAGiIpTrOPL2jQBrai_TnS0U96Ymw63SVvw
+DATABASE_URL=postgresql://task_earnings_db_user:YOUR_PASSWORD@dpg-d447ne6mcj7s73bug8ug-a.oregon-postgres.render.com:5432/task_earnings_db
 MONETAG_ZONE=10136395
-BASE_URL=https://task-earnings-bot.onrender.com
-ADMIN_TELEGRAM_IDS=5236441213,5725566044
+ADMIN_TELEGRAM_ID=5236441213,5725566044
+ADMIN_PANEL_TOKEN=7985799310:AAGiIpTrOPL2jQBrai_TnS0U96Ymw63SVvw
+COIN_TO_USD=0.00005
+PORT=10000
+BASE_URL=https://task-earnings-bot.onrender.com     # your render URL
+MIN_WITHDRAWAL_COINS=60000
+REWARD_PER_TASK=200
+REFERRAL_REWARD=50
