Fix formatting of BASE_URL in .env file

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ ADMIN_TELEGRAM_ID=5236441213,5725566044
 ADMIN_PANEL_TOKEN=7985799310:AAGiIpTrOPL2jQBrai_TnS0U96Ymw63SVvw
 COIN_TO_USD=0.00005
 PORT=10000
-BASE_URL=https://task-earnings-bot.onrender.com     # your render URL
+BASE_URL=https://task-earnings-bot.onrender.com
 MIN_WITHDRAWAL_COINS=60000
 REWARD_PER_TASK=200
 REFERRAL_REWARD=50
