--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL=postgresql://task_earnings_db_user:cRsisnWLclnxipJspodN72YEwItqnZE0@dpg-d447ne6mcj7s73bug8ug-a.oregon-postgres.render.com:5432/task_earnings_db
 MONETAG_ZONE=10136395
 ADMIN_TELEGRAM_ID=5236441213,5725566044
-ADMIN_PANEL_TOKEN=7985799310:AAGiIpTrOPL2jQBrai_TnS0U96Ymw63SVvw
+BOT_TOKEN=7985799310:AAGiIpTrOPL2jQBrai_TnS0U96Ymw63SVvw
 COIN_TO_USD=0.00005
 PORT=10000
 BASE_URL=https://task-earnings-bot.onrender.com
